--- a/stacks/garage/compose.yaml
+++ b/stacks/garage/compose.yaml
@@ -1,8 +1,16 @@
 networks:
   proxy:
     external: true
+x-logging-policy: &logging-policy
+  logging:
+    driver: local
+    options:
+      max-size: "10m"
+      max-file: "3"
+      compress: "true"
 services:
   garage:
+    <<: *logging-policy
     image: dxflrs/garage:${garage_version:-v2.0.0}
     container_name: garage
     restart: unless-stopped
@@ -28,6 +36,7 @@ services:
       traefik.http.services.garage.loadbalancer.server.url: "http://garage:3900"
 
   webui:
+    <<: *logging-policy
     image: khairul169/garage-webui:${garage_webui_version:-latest}
     container_name: garage-webui
     restart: unless-stopped
