--- a/stacks/homeassistant/compose.yaml
+++ b/stacks/homeassistant/compose.yaml
@@ -1,8 +1,16 @@
 networks:
   proxy:
     external: true
+x-logging-policy: &logging-policy
+  logging:
+    driver: local
+    options:
+      max-size: "10m"
+      max-file: "3"
+      compress: "true"
 services:
   homeassistant:
+    <<: *logging-policy
     image: ghcr.io/home-assistant/home-assistant:${homeassistant_version:-stable}
     container_name: homeassistant
     restart: unless-stopped
