--- a/stacks/netbootxyz/compose.yaml
+++ b/stacks/netbootxyz/compose.yaml
@@ -1,8 +1,16 @@
 networks:
   proxy:
     external: true
+x-logging-policy: &logging-policy
+  logging:
+    driver: local
+    options:
+      max-size: "10m"
+      max-file: "3"
+      compress: "true"
 services:
   netbootxyz:
+    <<: *logging-policy
     image: ghcr.io/netbootxyz/netbootxyz:${netbootxyz_version-latest}
     container_name: netbootxyz
     restart: always
