--- a/stacks/media/compose.yaml
+++ b/stacks/media/compose.yaml
@@ -84,3 +84,21 @@ services:
       traefik.http.routers.calibre.rule: "Host(`books.${domain}`)"
       traefik.http.routers.calibre.tls.certresolver: "cloudflare"
       traefik.http.services.calibre.loadbalancer.server.url: "http://calibre:8083"
+  navidrome:
+    <<: *logging-policy
+    image: deluan/navidrome:${navidrome_version:-latest}
+    container_name: navidrome
+    user: ${uid:-1000}:${gid:-1000}
+    restart: always
+    networks:
+      proxy: null
+    volumes:
+      - ${data:-.}/jellyfin:/data:rw
+      - ${media}/Music:/music:ro
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.navidrome.entryPoints: "https"
+      traefik.http.routers.navidrome.middlewares: "goodbois@file"
+      traefik.http.routers.navidrome.rule: "Host(`nav.${domain}`)"
+      traefik.http.routers.navidrome.tls.certresolver: "cloudflare"
+      traefik.http.services.navidrome.loadbalancer.server.url: "http://navidrome:4533"
