--- a/stacks/reverseproxy/examples/traefik.yml
+++ b/stacks/reverseproxy/examples/traefik.yml
@@ -58,8 +58,17 @@ metrics:
 
 log:
   level: "INFO"
+  maxSize: 25
   maxAge: 7
   compress: true
   filePath: "/var/log/traefik/traefik.log"
+
 accessLog:
   filePath: "/var/log/traefik/access.log"
+  filters:
+    statusCodes:
+      - "300-399"
+      - "400-499"
+      - "500-599"
+    retryAttempts: true
+    minDuration: "1000ms"
