--- a/stacks/media/compose.yaml
+++ b/stacks/media/compose.yaml
@@ -33,7 +33,7 @@ services:
     labels:
       traefik.enable: "true"
       traefik.http.routers.jellyfin.entryPoints: "https"
-      traefik.http.routers.jellyfin.middlewares: "goodbois@file"
+      traefik.http.routers.jellyfin.middlewares: "allowedIPs@file"
       traefik.http.routers.jellyfin.rule: "Host(`jf.${domain}`)"
       traefik.http.routers.jellyfin.tls.certresolver: "cloudflare"
       traefik.http.services.jellyfin.loadbalancer.server.url: "http://jellyfin:8096"
@@ -59,7 +59,7 @@ services:
     labels:
       traefik.enable: "true"
       traefik.http.routers.jellyseerr.entryPoints: "https"
-      traefik.http.routers.jellyseerr.middlewares: "goodbois@file"
+      traefik.http.routers.jellyseerr.middlewares: "allowedIPs@file"
       traefik.http.routers.jellyseerr.rule: "Host(`seer.${domain}`)"
       traefik.http.routers.jellyseerr.tls.certresolver: "cloudflare"
       traefik.http.services.jellyseerr.loadbalancer.server.url: "http://jellyseerr:5055"
@@ -80,7 +80,7 @@ services:
     labels:
       traefik.enable: "true"
       traefik.http.routers.calibre.entryPoints: "https"
-      traefik.http.routers.calibre.middlewares: "goodbois@file"
+      traefik.http.routers.calibre.middlewares: "allowedIPs@file"
       traefik.http.routers.calibre.rule: "Host(`books.${domain}`)"
       traefik.http.routers.calibre.tls.certresolver: "cloudflare"
       traefik.http.services.calibre.loadbalancer.server.url: "http://calibre:8083"
@@ -98,7 +98,7 @@ services:
     labels:
       traefik.enable: "true"
       traefik.http.routers.navidrome.entryPoints: "https"
-      traefik.http.routers.navidrome.middlewares: "goodbois@file"
+      traefik.http.routers.navidrome.middlewares: "allowedIPs@file"
       traefik.http.routers.navidrome.rule: "Host(`nav.${domain}`)"
       traefik.http.routers.navidrome.tls.certresolver: "cloudflare"
       traefik.http.services.navidrome.loadbalancer.server.url: "http://navidrome:4533"
