--- a/stacks/reverseproxy/examples/dynamic.yml
+++ b/stacks/reverseproxy/examples/dynamic.yml
@@ -6,7 +6,7 @@ http:
           - "10.0.0.0/8"
           - "192.168.0.0/16"
           - "172.16.0.0/12"
-    goodbois:
+    allowedIPs:
       ipAllowList:
         sourceRange:
           - "10.0.0.0/8"
