--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -20,8 +20,7 @@ lldap_version=latest
 traefik_verison=latest
 
 # Traefik settings
-email=youremail@example.com
-cf_api_key=some-key1 # generate this key from cloudflare
+cf_dns_api_token=some-token1 # generate this token from cloudflare
 cs_api_key=some-key2 # generate this key from crowdsec
 TRAEFIK_DASHBOARD_CREDENTIALS='a-secure-hashed-password'
 
