--- a/stacks/website/compose.yaml
+++ b/stacks/website/compose.yaml
@@ -51,7 +51,7 @@ services:
     labels:
       traefik.enable: "true"
       traefik.http.routers.freshrss.entryPoints: "https"
-      traefik.http.routers.mywebsite.middlewares: "allowedIPs@file"
+      traefik.http.routers.freshrss.middlewares: "allowedIPs@file"
       traefik.http.routers.freshrss.rule: "Host(`rss.${domain}`)"
       traefik.http.routers.freshrss.tls.certresolver: "cloudflare"
       traefik.http.services.freshrss.loadbalancer.server.url: "http://freshrss:80"
