--- a/stacks/utils/example.env
+++ b/stacks/utils/example.env
@@ -9,12 +9,13 @@ uid=1000
 gid=1000
 
 # Image versions
+convertx_version=latest
+ittools_version=latest
 send_version=latest
 privatebin_version=latest
 postgres_version=latest
 picsur_version=latest
 redis_version=latest
-convertx_version=latest
 
 # Picsur settings
 picsur_dbpass='a_secure_db_password'
