--- a/stacks/utils/example.env
+++ b/stacks/utils/example.env
@@ -3,6 +3,7 @@ data=/path/to/host/storage
 
 # Domain settings
 domain=yourdomain.com
+local_domain=localonly.yourdomain.com
 
 # General settings
 uid=1000
