--- a/stacks/rxresume/example.env
+++ b/stacks/rxresume/example.env
@@ -3,6 +3,7 @@ data=/path/to/host/storage
 
 # Domain settings
 domain=yourdomain.com
+local_domain=localonly.yourdomain.com
 
 # Image versions
 authelia_version=latest
