--- a/stacks/rxresume/example.env
+++ b/stacks/rxresume/example.env
@@ -6,9 +6,9 @@ domain=yourdomain.com
 local_domain=localonly.yourdomain.com
 
 # Image versions
-authelia_version=latest
-crowdsec_bouncer_version=latest
-crowdsec_version=latest
+chrome_version=latest
+postgres_version=latest
+rxresume_version=latest
 
 # Postgres settings
 db_user=postgres
