--- a/stacks/rxresume/example.env
+++ b/stacks/rxresume/example.env
@@ -15,6 +15,11 @@ db_user=postgres
 db_pass=postgres
 db_name=postgres
 
+# Chrome settings
+chrome_token='a_long_and_secure_secret'
+
 # App settings
-access_token=
-refresh_token=
+access_token='a_long_and_secure_secret'
+refresh_token='a_long_and_secure_secret'
+s3_access_key='a_long_and_secure_secret'
+s3_secret_key='a_long_and_secure_secret'
