--- a/stacks/rxresume/compose.yaml
+++ b/stacks/rxresume/compose.yaml
@@ -89,13 +89,13 @@ services:
       # SMTP_URL: smtp://user:pass@smtp:587 # Optional
 
       # -- Storage (Garage) --
-      STORAGE_ENDPOINT: https://s3.${domain}
-      STORAGE_PORT: 443
+      STORAGE_ENDPOINT: garage
+      STORAGE_PORT: 3900
       STORAGE_REGION: garage
       STORAGE_BUCKET: rxresume
       STORAGE_ACCESS_KEY: ${s3_access_key}
       STORAGE_SECRET_KEY: ${s3_secret_key}
-      STORAGE_USE_SSL: "true"
+      STORAGE_USE_SSL: "false"
       STORAGE_SKIP_BUCKET_CHECK: "false"
     labels:
       traefik.enable: "true"
