added speedtest checker to utils

--- a/stacks/utils/example.env
+++ b/stacks/utils/example.env
@@ -12,6 +12,7 @@ gid=1000
 # Image versions
 convertx_version=latest
 ittools_version=latest
+myspeed_version=latest
 send_version=latest
 privatebin_version=latest
 postgres_version=latest
