--- a/stacks/utils/compose.yaml
+++ b/stacks/utils/compose.yaml
@@ -134,7 +134,7 @@ services:
   ittools:
     image: 'corentinth/it-tools:${ittools_version:-latest}'
     container_name: ittools
-    restart: unless-stopped
+    restart: always
     networks:
       proxy: null
     labels:
@@ -144,3 +144,18 @@ services:
       traefik.http.routers.ittools.rule: "Host(`it.${domain}`)"
       traefik.http.routers.ittools.tls.certresolver: "cloudflare"
       traefik.http.services.ittools.loadbalancer.server.port: 80
+  myspeed:
+    image: germannewsmaker/myspeed:${myspeed_version:-latest}
+    container_name: myspeed
+    restart: always
+    volumes:
+      - '${data:-.}/myspeed:/myspeed/data'
+    networks:
+      proxy: null
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.myspeed.entryPoints: "https"
+      traefik.http.routers.myspeed.middlewares: "localonly@file"
+      traefik.http.routers.myspeed.rule: "Host(`speed.${local_domain}`)"
+      traefik.http.routers.myspeed.tls.certresolver: "cloudflare"
+      traefik.http.services.myspeed.loadbalancer.server.port: 5216
