--- a/stacks/proxies/example.env
+++ b/stacks/proxies/example.env
@@ -13,3 +13,7 @@ tor_privoxy_version=latest
 cities='comma_separated_list_of_cities'
 provider='your_vpn_provider'
 wgkey='your_vpn_private_key'
+
+# Proxy settings
+proxy_user='your_user'
+proxy_pass='your_pass'
