make auth optional bc some browsers are bad

--- a/stacks/proxies/example.env
+++ b/stacks/proxies/example.env
@@ -15,5 +15,6 @@ provider='your_vpn_provider'
 wgkey='your_vpn_private_key'
 
 # Proxy settings
+enable_auth='true'
 proxy_user='your_user'
 proxy_pass='your_pass'
