--- a/stacks/proxies/compose.yaml
+++ b/stacks/proxies/compose.yaml
@@ -26,11 +26,8 @@ services:
       WIREGUARD_PRIVATE_KEY: ${wgkey}
       DOT_PROVIDERS: quad9
       SERVER_CITIES: ${cities:-Stockholm}
-      HTTPPROXY_USER: ${proxy_user}
-      HTTPPROXY_PASSWORD: ${proxy_pass}
     ports:
       - "1080:1080/tcp" # socks5 proxy
-      - "8888:8888/tcp" # http proxy
     volumes:
       - ${data:-.}/gluetun-proxy:/gluetun:rw
   socks5proxy:
@@ -40,6 +37,7 @@ services:
     network_mode: service:gluetun-proxy
     restart: always
     environment:
+      REQUIRE_AUTH: ${enable_auth}
       PROXY_USER: ${proxy_user}
       PROXY_PASS: ${proxy_pass}
   tor-privoxy:
