--- a/.github/workflows/validate-stacks.yaml
+++ b/.github/workflows/validate-stacks.yaml
@@ -1,9 +1,13 @@
-name: Validate Stacks
+name: Validate and push to main
 
 on:
   push:
     branches:
       - dev
+
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   validate:
@@ -12,6 +16,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
@@ -28,7 +35,7 @@ jobs:
         if: success()
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.pull_token }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           base: main
           branch: dev
           title: "Auto PR: dev → Main"
