--- a/.github/workflows/validate-stacks.yaml
+++ b/.github/workflows/validate-stacks.yaml
@@ -19,6 +19,7 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
+          ref: dev
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
@@ -33,12 +34,11 @@ jobs:
 
       - name: Create or Update Pull Request
         if: success()
-        uses: peter-evans/create-pull-request@v6
+        uses: peter-evans/create-pull-request@v7
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          base: main
-          branch: dev
-          title: "Auto PR: dev → Main"
+          branch: main
+          title: "Auto PR: Dev -> Main"
           body: "Latest commit: ${{ steps.commitmsg.outputs.msg }}"
           draft: false
           labels: "automation"
