--- a/.github/workflows/validate-stacks.yaml
+++ b/.github/workflows/validate-stacks.yaml
@@ -5,10 +5,6 @@ on:
     branches:
       - dev
 
-permissions:
-  contents: write
-  pull-requests: write
-
 jobs:
   validate:
     runs-on: ubuntu-latest
@@ -18,7 +14,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT }}
           ref: dev
 
       - name: Set up Docker
@@ -35,6 +31,7 @@ jobs:
       - name: Create PR and Merge
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.PAT }}
           script: |
             const commitMessage = `${{ steps.commitmsg.outputs.msg }}`;
 
