--- a/.github/workflows/validate-stacks.yaml
+++ b/.github/workflows/validate-stacks.yaml
@@ -1,4 +1,4 @@
-name: Validate and push to main
+name: Validate stacks
 
 on:
   push:
@@ -23,31 +23,14 @@ jobs:
       - name: Validate Stacks
         run: bash tests/validate_stacks.sh
 
-      - name: Get last commit message
+      - name: Save last commit message
         id: commitmsg
         run: |
           echo "msg=$(git log -1 --pretty=%B)" >> $GITHUB_OUTPUT
 
-      - name: Create PR and Merge
-        uses: actions/github-script@v7
+      - name: Upload commit message
+        uses: actions/upload-artifact@v4
         with:
-          github-token: ${{ secrets.PAT }}
-          script: |
-            const commitMessage = `${{ steps.commitmsg.outputs.msg }}`;
-
-            const { data: pr } = await github.rest.pulls.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: 'Auto-merge: Dev to Main',
-              head: 'dev',
-              base: 'main',
-              body: `## Latest Commit Message\n**${commitMessage}**\n\n---\n*Automated PR created after successful CI run*`
-            });
-
-            // Auto-merge the PR
-            await github.rest.pulls.merge({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: pr.number,
-              merge_method: 'merge'
-            });
+          name: last-commit-message
+          path: |
+            $GITHUB_OUTPUT
