--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -1,42 +1,29 @@
-name: Create PR and merge
+name: Create PR to Main
 
 on:
   workflow_run:
-    workflows:
-      - Validate stacks
+    workflows: ["Validate Stacks"]
     types:
       - completed
 
 jobs:
-  create-and-merge:
+  create-pr:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
-      - name: Download commit message
-        uses: actions/download-artifact@v4
+      - name: Checkout repository
+        uses: actions/checkout@v5
         with:
-          name: last-commit-message
-          path: ./artifact
-
-      - name: Read last commit message
-        id: commitmsg
-        run: |
-          # If you uploaded $GITHUB_OUTPUT, extract msg line; otherwise read commit.msg
-          if [ -f ./artifact/$GITHUB_OUTPUT ]; then
-            grep '^msg=' ./artifact/$GITHUB_OUTPUT | sed 's/^msg=//g' > commit.msg || true
-          fi
-          if [ -f ./artifact/commit.msg ]; then
-            cat ./artifact/commit.msg > commit.msg
-          fi
-          echo "msg=$(cat commit.msg || true)" >> $GITHUB_OUTPUT
+          token: ${{ secrets.PAT }}
 
       - name: Create PR and Merge
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.PAT }}
           script: |
-            const commitMessage = `${{ steps.commitmsg.outputs.msg }}` || '';
+            const commitMessage = `${{ github.event.workflow_run.head_commit.message }}`;
+
             const { data: pr } = await github.rest.pulls.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -46,6 +33,7 @@ jobs:
               body: `## Latest Commit Message\n**${commitMessage}**\n\n---\n*Automated PR created after successful CI run*`
             });
 
+            // Auto-merge the PR
             await github.rest.pulls.merge({
               owner: context.repo.owner,
               repo: context.repo.repo,
