restrict to dev branch

--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -3,6 +3,7 @@ name: Create PR to Main
 on:
   workflow_run:
     workflows: ["Validate Stacks"]
+    branches: [dev]
     types:
       - completed
 
