remove db password inconsistencies

--- a/stacks/docs/example.env
+++ b/stacks/docs/example.env
@@ -19,5 +19,5 @@ uptimekuma_version=latest
 
 # Bookstack settings
 root_pass="a_secure_db_admin_password"
-db_pass="a_secure_db_admin_password"
+db_pass="a_secure_db_password"
 app_key="a_base64_encoded_secret"
