--- a/stacks/rxresume/example.env
+++ b/stacks/rxresume/example.env
@@ -11,9 +11,7 @@ postgres_version=latest
 rxresume_version=latest
 
 # Postgres settings
-db_user=postgres
-db_pass=postgres
-db_name=postgres
+db_pass="a_secure_db_password"
 
 # Chrome settings
 chrome_token='a_long_and_secure_secret'
