--- a/stacks/paperlessngx/example.env
+++ b/stacks/paperlessngx/example.env
@@ -14,6 +14,9 @@ keydb_version=latest
 paperlessngx_version=latest
 postgres_version=latest
 
+# Postgres settings
+db_pass="a_secure_db_password"
+
 # Paperlessngx settings
 secret_key='a_long_and_secure_secret'
 client_id='a_long_and_secure_secret'
