--- a/stacks/rxresume/compose.yaml
+++ b/stacks/rxresume/compose.yaml
@@ -22,9 +22,9 @@ services:
     volumes:
       - $data/db:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: ${db_user:-postgres}
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: ${db_pass:-postgres}
-      POSTGRES_DB: ${db_name:-postgres}
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
       interval: 10s
