change mount and add timezone

--- a/stacks/immich/example.env
+++ b/stacks/immich/example.env
@@ -5,6 +5,9 @@ data=/path/to/host/storage
 domain=yourdomain.com
 local_domain=localonly.yourdomain.com
 
+# General settings
+timezone=Your/Timezone
+
 # Image versions
 immich_version=latest
 
