--- a/stacks/immich/compose.yaml
+++ b/stacks/immich/compose.yaml
@@ -24,11 +24,12 @@ services:
     healthcheck:
       disable: false
     environment:
+      TZ: ${timezone:-UTC}
       DB_DATABASE_NAME: postgres
       DB_USERNAME: postgres
       DB_PASSWORD: ${db_pass:-postgres}
     volumes:
-      - ${data:-.}/immich/app:/data
+      - ${data:-.}/app:/data
       - /etc/localtime:/etc/localtime:ro
     labels:
       traefik.enable: "true"
@@ -60,4 +61,4 @@ services:
       POSTGRES_PASSWORD: ${db_pass:-postgres}
       POSTGRES_INITDB_ARGS: '--data-checksums'
     volumes:
-      - ${data:-.}/immich/db:/var/lib/postgresql/data
+      - ${data:-.}/db:/var/lib/postgresql/data
