change port to url

--- a/stacks/immich/compose.yaml
+++ b/stacks/immich/compose.yaml
@@ -37,7 +37,7 @@ services:
       traefik.http.routers.immich.middlewares: "localonly@file"
       traefik.http.routers.immich.rule: "Host(`im.${domain}`) || Host(`im.${local_domain}`)"
       traefik.http.routers.immich.tls.certresolver: "cloudflare"
-      traefik.http.services.immich.loadbalancer.server.port: 2283
+      traefik.http.services.immich.loadbalancer.server.url: "http://immich_server:2283"
   redis:
     <<: *logging-policy
     image: docker.io/valkey/valkey:8-bookworm
