setup forward auth for navidrome

--- a/stacks/media/compose.yaml
+++ b/stacks/media/compose.yaml
@@ -92,13 +92,20 @@ services:
     restart: always
     networks:
       proxy: null
+    environment:
+      ND_REVERSEPROXYWHITELIST: 0.0.0.0/0
+      ND_ENABLEUSEREDITING: false
     volumes:
       - ${data:-.}/jellyfin:/data:rw
       - ${media}/Music:/music:ro
     labels:
       traefik.enable: "true"
       traefik.http.routers.navidrome.entryPoints: "https"
-      traefik.http.routers.navidrome.middlewares: "allowedIPs@file"
+      traefik.http.routers.navidrome.middlewares: "allowedIPs@file, authelia@docker"
       traefik.http.routers.navidrome.rule: "Host(`nav.${domain}`)"
       traefik.http.routers.navidrome.tls.certresolver: "cloudflare"
       traefik.http.services.navidrome.loadbalancer.server.url: "http://navidrome:4533"
+      # App specific auth with basic-auth
+      traefik.http.routers.navidrome-subsonic.rule: Host(`nav.${domain}`) && PathPrefix(`/rest/`) && !Query(`c`, `NavidromeUI`)
+      traefik.http.routers.navidrome-subsonic.entrypoints: "https"
+      traefik.http.routers.navidrome-subsonic.middlewares: "allowedIPs@file, authelia-basicauth@docker"
